# schedule

./: .env.example  Cargo.toml  PLAN.md  README.md  docker-compose.yml
api/: Cargo.toml
api/src/: errors.rs  lib.rs  main.rs  openapi.rs  state.rs
api/src/handlers/: bookings.rs  mod.rs  resources.rs
api/src/handlers/resources/: create_resource.rs  get_available_slots.rs  get_resource.rs  get_resource_schedule.rs  list_resources.rs  mod.rs  schedule_rules.rs
api/src/startup/: handlers.rs  router.rs
application/: Cargo.toml
application/src/: dispatcher.rs  errors.rs  lib.rs  ports.rs
application/src/commands/: mod.rs
application/src/queries/: mod.rs
application/src/scheduler/: dto.rs  mod.rs  ports.rs  schedule_utils.rs
application/src/scheduler/commands/: cancel_booking.rs  create_booking.rs  create_resource.rs  create_schedule_rule.rs  delete_schedule_rule.rs  mod.rs  update_schedule_rule.rs
application/src/scheduler/queries/: get_available_slots.rs  get_booking.rs  get_resource.rs  get_resource_schedule.rs  list_resources.rs  mod.rs
domain/: Cargo.toml
domain/src/: errors.rs  events.rs  lib.rs
domain/src/scheduler/: booking.rs  effective_schedule.rs  errors.rs  events.rs  mod.rs  resource.rs  schedule_rule.rs  time_interval.rs
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs  startup.rs
infrastructure/src/event_handlers/: mod.rs
infrastructure/src/postgres/: booking_repo.rs  effective_interval_store.rs  mod.rs  resource_repo.rs  schedule_rule_repo.rs  scheduler_migrations.rs
infrastructure/src/rabbitmq/: mod.rs  publisher.rs
infrastructure/src/redis/: cache.rs  mod.rs
infrastructure/tests/: scheduler_integration.rs
